// Database structure defined with DBML
// Docs: https://dbml.dbdiagram.io/docs

Project Stripe_OLAP {
  database_type: 'PostgreSQL'
  Note: 'Stripe OLAP database proposal'
}


///// Tables /////

Table transactions {
  transaction_id bigint [primary key]
  timestamp datetime 
  merchant_id bigint
  customer_id bigint
  currency_code char(3) // ISO 4217
  ip_geo_id bigint
  amount float
  fee float
  payment_method_id integer
  payment_status_id integer
  device_type_id integer
  is_fraud boolean [null]
  fraud_score float [null]
  // ...
}


Table datetimes {
  timestamp datetime [primary key] 
  timezone integer
  date date
  time time
  year integer
  month tinyint
  week_day tinyint
  quarter tinyint
}


Table merchants {
  merchant_id bigint [primary key]
  merchant_name text
  country_code char(2) // ISO 3166-1 2-letter
  // ...
}

Table customers {
  customer_id bigint [primary key]
  country_code char(2) // ISO 3166-1 2-letter
  // ...
}

Table ip_geography {
  ip_geo_id bigint [primary key]
  latitude float
  longitude float
  country_code char(2) // ISO 3166-1 2-letter
  province text
  // ...
}


///// Reference tables /////

Table currencies {
  currency_code char(3) [primary key] // ISO 4217
  currency_name text [unique]
  usd_change_rate float
}

Table countries {
  country_code char(2) [primary key] // ISO 3166-1 alpha-2
  currency_name text [unique]
}

Table payment_methods {
  payment_method_id integer [primary key]
  payment_method text [unique] // credit_card, ...
}

Table payment_statuses {
  payment_status_id integer [primary key]
  payment_status text [unique] // successful, failed, refunded, ...
}

Table device_types {
  device_type_id integer [primary key]
  device_type text [unique] // mobile, desktop, ...
}

Table months {
  month tinyint [primary key]
  month_name text [unique]
}

Table week_days {
  week_day tinyint [primary key]
  week_day_name text [unique]
}


///// Relationships /////

// 1st level
Ref: transactions.timestamp > datetimes.timestamp
Ref: transactions.merchant_id > merchants.merchant_id
Ref: transactions.customer_id > customers.customer_id
Ref: transactions.currency_code > currencies.currency_code
Ref: transactions.ip_geo_id > ip_geography.ip_geo_id

// 2nd level
Ref: merchants.country_code > countries.country_code
Ref: customers.country_code > countries.country_code
Ref: ip_geography.country_code > countries.country_code

// Relations to ref tables
Ref: transactions.payment_method_id > payment_methods.payment_method_id
Ref: transactions.payment_status_id > payment_statuses.payment_status_id
Ref: transactions.device_type_id > device_types.device_type_id
Ref: datetimes.month > months.month
Ref: datetimes.week_day > week_days.week_day